[project]
name = "stochrl"
version = "0.1.0"
description = "Signal-calibrated, per-channel noise benchmarks for continuous-control RL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[mujoco]>=1.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "seaborn>=0.13.2",
    "shimmy[dm-control]>=1.3",
    "stable-baselines3>=2.4",
    "tensorboard>=2.21.0",
    "torch>=2.2",
    "tyro>=1.0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stochrl"]
